--- a/project10/index.html
+++ b/project10/index.html
@@ -65,7 +65,7 @@
                     <img src="https://th.bing.com/th/id/OIP.KmkFjBLupS8AxAW4DoRu3gHaE8?rs=1&pid=ImgDetMain" alt="photo3">
                     <h4>Mini web projects</h4>
                     <p>Portfolio-building</p>
-                    <button type="button" class="btn-social"><a href="#">Code</a></button>
+                    <button type="button" class="btn-social"><a href="https://github.com/ironcrush2006/MIniproject">Code</a></button>
                 </div>
             </div>
         </div>
