--- a/project19/index.html
+++ b/project19/index.html
@@ -69,7 +69,9 @@ container.appendChild(name);
 container.appendChild(year);
 container.appendChild(dep);
 
-        
+    setTimeout(()=>{ 
+        console.log("Working")
+    },2000)
     </script>  
 </body>
 </html>
