--- a/project21/index.html
+++ b/project21/index.html
@@ -33,6 +33,7 @@
     async function handleData(){
         try{
             const data = await fetchData(apiURl);
+            console.log("Data:",data);
         }
         catch(err){ 
 
