--- a/project21/index.html
+++ b/project21/index.html
@@ -41,6 +41,8 @@
             const data = await fetchData(apiURL);
             // Log the fetched data to the console (or handle it as needed)
             console.log(data);
+            //to show on the broswer
+            document.getElementById('content').textContent=JSON.stringify(data,2)
         } catch (error) {
             // Log any errors that occur during the data fetching process
             console.error('Error fetching data:', error);
