(added) body extract

--- a/project21/index.html
+++ b/project21/index.html
@@ -42,7 +42,7 @@
             // Log the fetched data to the console (or handle it as needed)
             console.log(data);
             //to show on the broswer
-            document.getElementById('content').textContent=JSON.stringify(data,2)
+            document.getElementById('content').textContent=JSON.stringify(data)
         } catch (error) {
             // Log any errors that occur during the data fetching process
             console.error('Error fetching data:', error);
