--- a/project21/index.html
+++ b/project21/index.html
@@ -51,5 +51,15 @@
 
     // Call the handleData function to initiate the data fetching process
     handleData();
+
+    const a=[1,3,4];
+    const b=[2,3,4];
+
+    const c=[...a,...b];
+    function sum(...c){ 
+        return c.reduce((acc,curr)=>acc+curr,0);
+    }
+
+    console.log(sum(...a));
 </script>
 </html>
